@@ -110,9 +110,8 @@ offline_downsync_sync (CamelSession *session, CamelSessionThreadMsg *mm)
 	
 	if (m->changes) {
 		for (i = 0; i < m->changes->uid_added->len; i++) {
-			int pc = i * 100 / m->changes->uid_added->len;
 			
-			camel_operation_progress (NULL, pc);
+			camel_operation_progress (NULL, i, m->changes->uid_added->len);
 			/* TNY: Partial message retrieval here is always body only */
 			/* TODO: Maybe detect what the original message was, if there was a message? */
 			if ((message = camel_folder_get_message (m->folder, m->changes->uid_added->pdata[i], CAMEL_FOLDER_RECEIVE_PARTIAL, -1, &mm->ex)))
@@ -264,11 +263,11 @@ offline_folder_downsync (CamelOfflineFolder *offline, const char *expression, Ca
 	}
 	
 	for (i = 0; i < uids->len; i++) {
-		int pc = i * 100 / uids->len;
+		
 		/* TNY: Partial message retrieval here is always body only */
 		/* TODO: Maybe detect what the original message was, if there was a message? */		
 		message = camel_folder_get_message (folder, uids->pdata[i], CAMEL_FOLDER_RECEIVE_PARTIAL, -1, ex);
-		camel_operation_progress (NULL, pc);
+		camel_operation_progress (NULL, i, uids->len);
 		if (message == NULL)
 			break;
 		
